--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
     <link rel="stylesheet" href="assets/admin-scripts/mdi/css/materialdesignicons.min.css" />
     <link rel="stylesheet" href="assets/admin-scripts/simple-line-icons/css/simple-line-icons.css" />
     <link rel="stylesheet" href="assets/admin-scripts/flag-icon-css/css/flag-icon.min.css" />
