--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
+
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
     <link rel="stylesheet" href="assets/admin-scripts/mdi/css/materialdesignicons.min.css" />
     <link rel="stylesheet" href="assets/admin-scripts/simple-line-icons/css/simple-line-icons.css" />
@@ -32,10 +37,11 @@
     <app-root></app-root>
 
     <!-- plugins:js -->
-    <script src="assets/admin-scripts/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- <script src="assets/admin-scripts/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/admin-scripts/jquery/dist/jquery.min.js"></script>
-    <script src="assets/admin-scripts/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.min.js"></script>
-
+    <script src="assets/admin-scripts/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.min.js"></script> -->
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page-->
     <!-- End plugin js for this page-->
