--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,8 @@
     <script src="assets/admin-scripts/perfect-scrollbar/dist/js/perfect-scrollbar.jquery.min.js"></script> -->
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.ckeditor.com/4.7.0/standard-all/ckeditor.js"></script>
+
     <!-- endinject -->
     <!-- Plugin js for this page-->
     <!-- End plugin js for this page-->
