--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/admin-scripts/perfect-scrollbar/dist/css/perfect-scrollbar.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/ratchet/2.0.2/css/ratchet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/@progress/kendo-theme-default@latest/dist/all.css" />
     <!-- endinject -->
     <!-- plugin css for this page -->
     <link rel="stylesheet" href="assets/admin-scripts/font-awesome/css/font-awesome.min.css" />
